2009-04-20  Gordon Williams <gordon.williams@collabora.co.uk>

	NB#109969 - Maximise animation in task switcher had flickering
	            as the title bar became suddenly visible
	* src/home/hd-title-bar.h
	* src/home/hd-title-bar.c: Added a function to return a copy of the
	title bar that can be used for animations
	* src/home/hd-task-navigator.c: Re-ordered plate and prison clutter
	actors so that we can remove the clipping on the actor prison and
	display a fake title bar in it. Fake title bar is now behind the
	plate as it fades out, to produce a nice transition to the real
	title bar.

2009-04-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager (hd_render_manager_set_status_area):
	  Block home background when blocking the status area.
	  For NB#111773.

2009-04-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.42

2009-04-20  Gordon Williams <gordon.williams@collabora.co.uk>
	
	NB#94184 - removing the closing effect particle from hildon-desktop 
	and adding it to the theme
	* src/mb/hd-theme.h: Add #define for CLOSING_PARTICLE
	* src/util/hd-transition.h: Remove old particle #define
	* src/util/hd-transition.c
	* src/home/hd-task-navigator.c: Changes to load closing anim particle
	from the theme.
	* data/white-particle.png (Removed): as we use the particle from the
	theme now	

2009-04-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#111908 Task button doesn't respond when the image viewer is opened
	          for the second time.

	HdLauncher remained visible after launching the app for the second time
	because the launcher's private transition engine thought it's coming
	from subview and didn't hide it end the end of transition.

	* src/launcher/hd-launcher.c (hd_launcher_application_tile_clicked):
	  Don't start a mistaken subview-out transition when the launcher
	  is (to be) hidden. (An appropriate main-out transition is already
	  in progress.)

2009-04-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>
